# ds410-course-proj-redo

./: .gitignore  README.md  TokenizerLDA.ipynb  full code.ipynb  main.py  main_test.py  pyproject.toml  spark-47217239.err  spark-47217239.out  standalone.sh  standalone_test.sh  test_txt.txt  tokinizing.py
.ipynb_checkpoints/: data_proc-checkpoint.ipynb
dataproc/: dataproctools.py
examples/: data_proc_example.ipynb  hyperparam sweep.ipynb  study.pkl
examples/saved_intermediates/filtered_dataframe/: .part-00015-1e74add6-b49f-4d21-b1bf-fb7761e65426-c000.csv.crc  part-00015-1e74add6-b49f-4d21-b1bf-fb7761e65426-c000.csv
playground/: data_proc.ipynb  data_proc_final_link.ipynb
sparktools/: sparkhandler.py
tokenizing/: Tokenizing.py
util/: 410updatedVIZ.py  lda_visualizations_old.py  updatedVIZ.py
visualizations/: 410updatedVIZ.ipynb  410viz.ipynb  lda_visualizations.py
