[project]
name = "ds410-course-proj-redo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "boto3>=1.41.2",
    "botocore>=1.41.2",
    "fastwarc>=0.15.2",
    "idna>=3.11",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "optuna>=4.6.0",
    "orjson>=3.11.4",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyspark>=4.0.1",
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "spark>=0.2.1",
    "ujson>=5.11.0",
    "warcio>=1.7.5",
    "wordcloud>=1.9.4",
]
